# hashward

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_hashing.py
src/hashward/: __init__.py  _types.py  _utils.py  context.py  exc.py  identify.py  registry.py
src/hashward/compat/: __init__.py  passlib.py  passlib_hash.py
src/hashward/schemes/: __init__.py  _base.py  argon2.py  bcrypt.py  des_crypt.py  django.py  md5_crypt.py  pbkdf2.py  plaintext.py  scrypt.py  sha_crypt.py
tests/: conftest.py  test_bug_fixes.py  test_compat.py  test_context.py  test_context_advanced.py  test_identify.py  test_registry.py  test_schemes_argon2.py  test_schemes_bcrypt.py  test_schemes_des_crypt.py  test_schemes_django.py  test_schemes_md5_crypt.py  test_schemes_pbkdf2.py  test_schemes_scrypt.py  test_schemes_sha_crypt.py  test_utils.py
