[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hashward"
dynamic = ["version"]
description = "Modern password hashing for Python — a drop-in replacement for passlib"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Agentine" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
argon2 = ["argon2-cffi>=21.1.0"]
bcrypt = ["bcrypt>=4.0.0"]
all = ["argon2-cffi>=21.1.0", "bcrypt>=4.0.0"]
dev = ["pytest>=7.0", "argon2-cffi>=21.1.0", "bcrypt>=4.0.0"]

[tool.hatch.version]
path = "src/hashward/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
