[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hashward"
dynamic = ["version"]
description = "Modern password hashing for Python — a drop-in replacement for passlib"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Agentine" },
]
keywords = [
    "password",
    "hashing",
    "argon2",
    "bcrypt",
    "pbkdf2",
    "scrypt",
    "security",
    "authentication",
    "passlib",
    "cryptography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
argon2 = ["argon2-cffi>=21.1.0"]
bcrypt = ["bcrypt>=4.0.0"]
all = ["argon2-cffi>=21.1.0", "bcrypt>=4.0.0"]
dev = [
    "pytest>=7.0",
    "argon2-cffi>=21.1.0",
    "bcrypt>=4.0.0",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/agentine/hashward"
Repository = "https://github.com/agentine/hashward"
Issues = "https://github.com/agentine/hashward/issues"

[tool.hatch.version]
path = "src/hashward/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
